--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-assets/*
-!assets/.gitignore
-protected/runtime/*
-!protected/runtime/.gitignore
-protected/data/*.db
-themes/classic/views/
+.settings
+.buildpath
+.project
+nbproject
+composer.lock
+vendor/
+/nbproject/private/
